--- a/contato.html
+++ b/contato.html
@@ -78,14 +78,15 @@
                     <i class="fa-solid fa-phone"></i>
                     <div class="info-content">
                         <p>Telefone</p>
-                        <span>(69) 99960-5969</span>
+                        <span>(67) 99632 - 0391</span> /
+                        <span>(67) 99957 - 1883</span>
                     </div>
                 </div>
                 <div class="informacoes endereco">
                     <i class="fa-solid fa-location-dot"></i>
                     <div class="info-content">
                         <p>Endereço</p>
-                        <span>Pimenta Bueno - RO</span>
+                        <span>Nova Alvorada do Sul - MS</span>
                     </div>
                 </div>
                 <div class="informacoes horario">
